clean up bibtex

--- a/data/freesolv/example_processing_and_templates.ipynb
+++ b/data/freesolv/example_processing_and_templates.ipynb
@@ -1049,7 +1049,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 21,
    "id": "d3890961-444e-4a26-b8fc-ed8c4e959af9",
    "metadata": {
     "tags": []
@@ -1124,16 +1124,16 @@
     "    \"url\": \"https://github.com/MobleyLab/FreeSolv\",\n",
     "    \"bibtex\":\n",
     "        \"\"\"@article{mobley2013experimental,\n",
-    "        title={Experimental and calculated small molecule hydration free energies},\n",
-    "        author={Mobley, David L},\n",
-    "        year={2013}\n",
-    "        \"\"\"\n",
+    "title={Experimental and calculated small molecule hydration free energies},\n",
+    "author={Mobley, David L},\n",
+    "year={2013}\n",
+    "\"\"\"\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 22,
    "id": "580bbd79-4845-4515-be94-3e4a9815d048",
    "metadata": {
     "tags": []
@@ -1145,7 +1145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 23,
    "id": "873fa5dd-9b60-40f5-b537-4d7a206414ea",
    "metadata": {
     "tags": []
@@ -1158,7 +1158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 24,
    "id": "d01686c0-6746-4fc4-b019-350270dfc26f",
    "metadata": {
     "tags": []
@@ -1168,7 +1168,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-rw-r--r--  1 MMP  staff   1,2K 23 Feb 11:27 meta.yaml\n"
+      "-rw-r--r--  1 MMP  staff   1,1K 23 Feb 11:30 meta.yaml\n"
      ]
     }
    ],
@@ -1178,7 +1178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 25,
    "id": "ef6063c5-7a8b-4344-bccf-a073443feebf",
    "metadata": {
     "tags": []
@@ -1188,9 +1188,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "bibtex: \"@article{mobley2013experimental,\\n        title={Experimental and calculated\\\n",
-      "  \\ small molecule hydration free energies},\\n        author={Mobley, David L},\\n\\\n",
-      "  \\        year={2013}\\n        \"\n",
+      "bibtex: '@article{mobley2013experimental,\n",
+      "\n",
+      "  title={Experimental and calculated small molecule hydration free energies},\n",
+      "\n",
+      "  author={Mobley, David L},\n",
+      "\n",
+      "  year={2013}\n",
+      "\n",
+      "  '\n",
       "description: ''\n",
       "identifiers:\n",
       "- description: SMILES\n",
