clean up notebook

--- a/data/freesolv/example_processing_and_templates.ipynb
+++ b/data/freesolv/example_processing_and_templates.ipynb
@@ -1049,7 +1049,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 26,
    "id": "d3890961-444e-4a26-b8fc-ed8c4e959af9",
    "metadata": {
     "tags": []
@@ -1123,7 +1123,8 @@
     "    \"num_points\": len(df), # number of datapoints in this dataset\n",
     "    \"url\": \"https://github.com/MobleyLab/FreeSolv\",\n",
     "    \"bibtex\":\n",
-    "        \"\"\"@article{mobley2013experimental,\n",
+    "gi\n",
+    "    \"\"\"@article{mobley2013experimental,\n",
     "title={Experimental and calculated small molecule hydration free energies},\n",
     "author={Mobley, David L},\n",
     "year={2013}\n",
@@ -1133,7 +1134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 27,
    "id": "580bbd79-4845-4515-be94-3e4a9815d048",
    "metadata": {
     "tags": []
@@ -1145,7 +1146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 33,
    "id": "873fa5dd-9b60-40f5-b537-4d7a206414ea",
    "metadata": {
     "tags": []
@@ -1153,12 +1154,12 @@
    "outputs": [],
    "source": [
     "with open(fn_meta, \"w\") as f:\n",
-    "    yaml.dump(meta, f) #, default_flow_style=False)"
+    "    yaml.dump(meta, f, default_flow_style=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 34,
    "id": "d01686c0-6746-4fc4-b019-350270dfc26f",
    "metadata": {
     "tags": []
@@ -1168,7 +1169,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-rw-r--r--  1 MMP  staff   1,1K 23 Feb 11:30 meta.yaml\n"
+      "-rw-r--r--  1 MMP  staff   1,1K 23 Feb 11:32 meta.yaml\n"
      ]
     }
    ],
@@ -1178,7 +1179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 35,
    "id": "ef6063c5-7a8b-4344-bccf-a073443feebf",
    "metadata": {
     "tags": []
