feat: added description information

--- a/data/freesolv/example_processing_and_templates.ipynb
+++ b/data/freesolv/example_processing_and_templates.ipynb
@@ -1058,7 +1058,7 @@
    "source": [
     "meta = {\n",
     "    \"name\": \"freesolv\", # unique identifier, we will also use this for directory names\n",
-    "    \"description\": \"\",\n",
+    "    \"description\": \"Experimental and calculated small molecule hydration free energies\",\n",
     "    \"targets\": [\n",
     "        {\n",
     "            \"id\": \"exp_value\", # name of the column in a tabular dataset\n",
@@ -1146,7 +1146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 36,
    "id": "873fa5dd-9b60-40f5-b537-4d7a206414ea",
    "metadata": {
     "tags": []
@@ -1154,12 +1154,12 @@
    "outputs": [],
    "source": [
     "with open(fn_meta, \"w\") as f:\n",
-    "    yaml.dump(meta, f, default_flow_style=False)"
+    "    yaml.dump(meta, f)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 37,
    "id": "d01686c0-6746-4fc4-b019-350270dfc26f",
    "metadata": {
     "tags": []
@@ -1179,7 +1179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 38,
    "id": "ef6063c5-7a8b-4344-bccf-a073443feebf",
    "metadata": {
     "tags": []
