feat: notebook cleanup

--- a/data/freesolv/example_processing_and_templates.ipynb
+++ b/data/freesolv/example_processing_and_templates.ipynb
@@ -104,26 +104,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "43873fc3-20a8-487d-a7c5-33bd58414159",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "total 920\n",
-      "-rw-r--r--  1 MMP  staff   138K 22 Feb 16:07 data_clean.csv\n",
-      "-rw-r--r--  1 MMP  staff   142K 22 Feb 14:24 data_original.txt\n",
-      "-rw-r--r--  1 MMP  staff    53K 23 Feb 11:15 example_processing_and_templates.ipynb\n",
-      "-rw-r--r--  1 MMP  staff    51K 22 Feb 16:26 example_sampling.ipynb\n",
-      "-rw-r--r--  1 MMP  staff   831B 22 Feb 16:34 template_config.json\n",
-      "-rw-r--r--  1 MMP  staff   561B 23 Feb 10:52 template_config.yaml\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!ls -lh"
    ]
@@ -1049,7 +1035,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 40,
    "id": "d3890961-444e-4a26-b8fc-ed8c4e959af9",
    "metadata": {
     "tags": []
@@ -1123,7 +1109,6 @@
     "    \"num_points\": len(df), # number of datapoints in this dataset\n",
     "    \"url\": \"https://github.com/MobleyLab/FreeSolv\",\n",
     "    \"bibtex\":\n",
-    "gi\n",
     "    \"\"\"@article{mobley2013experimental,\n",
     "title={Experimental and calculated small molecule hydration free energies},\n",
     "author={Mobley, David L},\n",
@@ -1134,7 +1119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 41,
    "id": "580bbd79-4845-4515-be94-3e4a9815d048",
    "metadata": {
     "tags": []
@@ -1146,7 +1131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 42,
    "id": "873fa5dd-9b60-40f5-b537-4d7a206414ea",
    "metadata": {
     "tags": []
@@ -1159,27 +1144,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "id": "d01686c0-6746-4fc4-b019-350270dfc26f",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "-rw-r--r--  1 MMP  staff   1,1K 23 Feb 11:32 meta.yaml\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!ls -lh {fn_meta}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 44,
    "id": "ef6063c5-7a8b-4344-bccf-a073443feebf",
    "metadata": {
     "tags": []
@@ -1198,7 +1175,7 @@
       "  year={2013}\n",
       "\n",
       "  '\n",
-      "description: ''\n",
+      "description: Experimental and calculated small molecule hydration free energies\n",
       "identifiers:\n",
       "- description: SMILES\n",
       "  id: SMILES\n",
