feat: add transform.py

--- a/data/freesolv/example_processing_and_templates.ipynb
+++ b/data/freesolv/example_processing_and_templates.ipynb
@@ -26,15 +26,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 46,
    "id": "cf59e3e9-8061-4022-9eae-e978311b4155",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
+    "import requests\n",
     "import pandas as pd\n",
-    "#import json\n",
     "import yaml"
    ]
   },
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 47,
    "id": "775f60af-1d44-49da-b082-50c5ad77e649",
    "metadata": {
     "tags": []
@@ -68,19 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "458a4865-5f97-498a-9529-42281f1427d1",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "!wget {data_path}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 48,
    "id": "7bb8eb5e-f513-40d2-a68c-7cda1a51ad31",
    "metadata": {
     "tags": []
@@ -92,14 +80,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "8fdbc1d1-1b2e-4481-ad0b-8a1d2b9d2646",
+   "execution_count": 49,
+   "id": "413f72f2-9f5e-4ba8-919d-7ff3908f745a",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "!mv database.txt {fn_data_original}"
+    "data = requests.get(data_path)\n",
+    "with open(fn_data_original, \"wb\") as f:\n",
+    "    f.write(data.content)"
    ]
   },
   {
@@ -839,7 +829,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 59,
    "id": "077b0c5f-8772-4879-9317-3fa28799689b",
    "metadata": {
     "tags": []
@@ -851,7 +841,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 60,
    "id": "6eaef0e6-2115-4793-ac43-a196b25d47a0",
    "metadata": {
     "tags": []
@@ -863,7 +853,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 61,
    "id": "43619e7c-9c82-4ff0-ae25-403861304635",
    "metadata": {
     "tags": []
@@ -1016,7 +1006,7 @@
        "4  Experimental uncertainty not presently availab...  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1156,7 +1146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 62,
    "id": "ef6063c5-7a8b-4344-bccf-a073443feebf",
    "metadata": {
     "tags": []
@@ -1166,15 +1156,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "bibtex: '@article{mobley2013experimental,\n",
-      "\n",
-      "  title={Experimental and calculated small molecule hydration free energies},\n",
-      "\n",
-      "  author={Mobley, David L},\n",
-      "\n",
-      "  year={2013}\n",
-      "\n",
-      "  '\n",
+      "bibtex: \"@article{mobley2013experimental,\\n    title={Experimental and calculated\\\n",
+      "  \\ small molecule hydration free energies},\\n    author={Mobley, David L},\\n    year={2013}\\n\\\n",
+      "  \\    \"\n",
       "description: Experimental and calculated small molecule hydration free energies\n",
       "identifiers:\n",
       "- description: SMILES\n",
@@ -1222,6 +1206,214 @@
    ],
    "source": [
     "!cat {fn_meta}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bd3f930a-638b-4bb7-a1d2-80688f2f6891",
+   "metadata": {},
+   "source": [
+    "# create transform.py"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "9aab00fd-58a8-40b0-be30-1e269e0d323b",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "path_file = \"transform.py\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "id": "8368bb20-8e1c-4b7d-b0e2-b39da36b5972",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting transform.py\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%writefile $path_file\n",
+    "import requests\n",
+    "import pandas as pd\n",
+    "import yaml\n",
+    "\n",
+    "\n",
+    "def get_and_transform_data():\n",
+    "    \n",
+    "    # get raw data\n",
+    "    data_path = \"https://raw.githubusercontent.com/MobleyLab/FreeSolv/master/database.txt\"\n",
+    "    fn_data_original = \"data_original.txt\"\n",
+    "    data = requests.get(data_path)\n",
+    "    with open(fn_data_original, \"wb\") as f:\n",
+    "        f.write(data.content)\n",
+    "        \n",
+    "    # create dataframe\n",
+    "    df = pd.read_csv(fn_data_original, delimiter=\";\", skiprows=2)\n",
+    "    \n",
+    "    # check if fields are the same\n",
+    "    fields_orig = df.columns.tolist()\n",
+    "    assert fields_orig == [\n",
+    "        '# compound id (and file prefix)',\n",
+    "        ' SMILES',\n",
+    "        ' iupac name (or alternative if IUPAC is unavailable or not parseable by OEChem)',\n",
+    "        ' experimental value (kcal/mol)',\n",
+    "        ' experimental uncertainty (kcal/mol)',\n",
+    "        ' Mobley group calculated value (GAFF) (kcal/mol)',\n",
+    "        ' calculated uncertainty (kcal/mol)',\n",
+    "        ' experimental reference (original or paper this value was taken from)',\n",
+    "        ' calculated reference',\n",
+    "        ' text notes.'\n",
+    "    ]\n",
+    "    \n",
+    "    # overwrite column names = fields\n",
+    "    fields_clean = [\n",
+    "        'compound_id',\n",
+    "        'SMILES',\n",
+    "        'iupac_name',\n",
+    "        'exp_value',\n",
+    "        'exp_uncertainty',\n",
+    "        'GAFF',\n",
+    "        'calc_uncertainty',\n",
+    "        'exp_ref',\n",
+    "        'calc_reference',\n",
+    "        'notes'\n",
+    "    ]\n",
+    "    df.columns = fields_clean\n",
+    "    \n",
+    "    # data cleaning\n",
+    "    df.notes = df.notes.str.strip() # remove leading and trailing white space characters\n",
+    "    \n",
+    "    # save to csv\n",
+    "    fn_data_csv = \"data_clean.csv\"\n",
+    "    df.to_csv(fn_data_csv, index=False)\n",
+    "    \n",
+    "    # create meta yaml\n",
+    "    meta = {\n",
+    "        \"name\": \"freesolv\", # unique identifier, we will also use this for directory names\n",
+    "        \"description\": \"Experimental and calculated small molecule hydration free energies\",\n",
+    "        \"targets\": [\n",
+    "            {\n",
+    "                \"id\": \"exp_value\", # name of the column in a tabular dataset\n",
+    "                \"description\": \"experimental hydration free energy value\", # description of what this column means\n",
+    "                \"units\": \"kcal/mol\", # units of the values in this column (leave empty if unitless)\n",
+    "                \"type\": \"continuous\", # can be \"categorical\", \"ordinal\", \"continuous\"\n",
+    "                \"names\": # names for the property (to sample from for building the prompts)\n",
+    "                [\n",
+    "                    \"hydration free energy\",\n",
+    "                ],\n",
+    "            },\n",
+    "            {\n",
+    "                \"id\": \"exp_uncertainty\",\n",
+    "                \"description\": \"experimental hydration free energy uncertainty\",\n",
+    "                \"units\": \"kcal/mol\",\n",
+    "                \"type\": \"continuos\",\n",
+    "                \"names\":\n",
+    "                [\n",
+    "                    \"hydration free energy uncertainty\",\n",
+    "                ],\n",
+    "            },\n",
+    "            {\n",
+    "                \"id\": \"GAFF\", # name of the column in a tabular dataset\n",
+    "                \"description\": \"mobley group calculated value\", # description of what this column means\n",
+    "                \"units\": \"kcal/mol\", # units of the values in this column (leave empty if unitless)\n",
+    "                \"type\": \"continuous\", # can be \"categorical\", \"ordinal\", \"continuous\"\n",
+    "                \"names\": # names for the property (to sample from for building the prompts)\n",
+    "                [\n",
+    "                    \"GAFF\",\n",
+    "                    \"mobley group calculated value\",\n",
+    "                ],\n",
+    "            },\n",
+    "            {\n",
+    "                \"id\": \"calc_uncertainty\",\n",
+    "                \"description\": \"mobley group calculated value calculated uncertainty\",\n",
+    "                \"units\": \"kcal/mol\",\n",
+    "                \"type\": \"continuos\",\n",
+    "                \"names\":\n",
+    "                [\n",
+    "                    \"GAFF uncertainty\",\n",
+    "                    \"mobley group calculated value uncertainty\",\n",
+    "                ],\n",
+    "            },\n",
+    "        ],\n",
+    "        \"identifiers\": [\n",
+    "            {\n",
+    "                \"id\": \"SMILES\", # column name \n",
+    "                \"type\": \"SMILES\", # can be \"SMILES\", \"SELFIES\", \"IUPAC\", \"OTHER\"\n",
+    "                \"description\": \"SMILES\", # description (optional, except for \"OTHER\")\n",
+    "            },\n",
+    "            {\n",
+    "                \"id\": \"iupac_name\",\n",
+    "                \"type\": \"IUPAC\",\n",
+    "                \"description\": \"IUPAC\",\n",
+    "            },\n",
+    "        ],\n",
+    "        \"license\": \"CC BY-NC-SA 4.0\", # license under which the original dataset was published\n",
+    "        \"links\": [ # list of relevant links (original dataset, other uses, etc.)\n",
+    "            \"https://github.com/MobleyLab/FreeSolv\",\n",
+    "            \"https://escholarship.org/uc/item/6sd403pz\",\n",
+    "        ],\n",
+    "        \"num_points\": len(df), # number of datapoints in this dataset\n",
+    "        \"url\": \"https://github.com/MobleyLab/FreeSolv\",\n",
+    "        \"bibtex\":\n",
+    "        \"\"\"@article{mobley2013experimental,\n",
+    "        title={Experimental and calculated small molecule hydration free energies},\n",
+    "        author={Mobley, David L},\n",
+    "        year={2013}\"\"\"\n",
+    "    }\n",
+    "    fn_meta = \"meta.yaml\"\n",
+    "    with open(fn_meta, \"w\") as f:\n",
+    "        yaml.dump(meta, f)\n",
+    "        \n",
+    "    print(f\"Finished processing {meta['name']} dataset!\")\n",
+    "\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    get_and_transform_data()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "id": "d0474f26-70f3-4655-b81a-df4ada90e7a6",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Finished processing freesolv dataset!\n"
+     ]
+    }
+   ],
+   "source": [
+    "!python3 transform.py"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "953e7bee-bd5e-41d0-a2be-506e0bc97727",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "ls -lh"
    ]
   },
   {
