chore: remove lint

--- a/data/freesolv/example_processing_and_templates.ipynb
+++ b/data/freesolv/example_processing_and_templates.ipynb
@@ -378,16 +378,16 @@
    "outputs": [],
    "source": [
     "fields_clean = [\n",
-    "    'compound_id',\n",
-    "    'SMILES',\n",
-    "    'iupac_name',\n",
-    "    'exp_value',\n",
-    "    'exp_uncertainty',\n",
-    "    'GAFF',\n",
-    "    'calc_uncertainty',\n",
-    "    'exp_ref',\n",
-    "    'calc_reference',\n",
-    "    'notes'\n",
+    "    \"compound_id\",\n",
+    "    \"SMILES\",\n",
+    "    \"iupac_name\",\n",
+    "    \"exp_value\",\n",
+    "    \"exp_uncertainty\",\n",
+    "    \"GAFF\",\n",
+    "    \"calc_uncertainty\",\n",
+    "    \"exp_ref\",\n",
+    "    \"calc_reference\",\n",
+    "    \"notes\",\n",
     "]"
    ]
   },
@@ -584,7 +584,7 @@
    },
    "outputs": [],
    "source": [
-    "df.notes = df.notes.str.strip() # remove leading and trailing white space characters"
+    "df.notes = df.notes.str.strip()  # remove leading and trailing white space characters"
    ]
   },
   {
@@ -1033,16 +1033,15 @@
    "outputs": [],
    "source": [
     "meta = {\n",
-    "    \"name\": \"freesolv\", # unique identifier, we will also use this for directory names\n",
+    "    \"name\": \"freesolv\",  # unique identifier, we will also use this for directory names\n",
     "    \"description\": \"Experimental and calculated small molecule hydration free energies\",\n",
     "    \"targets\": [\n",
     "        {\n",
-    "            \"id\": \"exp_value\", # name of the column in a tabular dataset\n",
-    "            \"description\": \"experimental hydration free energy value\", # description of what this column means\n",
-    "            \"units\": \"kcal/mol\", # units of the values in this column (leave empty if unitless)\n",
-    "            \"type\": \"continuous\", # can be \"categorical\", \"ordinal\", \"continuous\"\n",
-    "            \"names\": # names for the property (to sample from for building the prompts)\n",
-    "            [\n",
+    "            \"id\": \"exp_value\",  # name of the column in a tabular dataset\n",
+    "            \"description\": \"experimental hydration free energy value\",  # description of what this column means\n",
+    "            \"units\": \"kcal/mol\",  # units of the values in this column (leave empty if unitless)\n",
+    "            \"type\": \"continuous\",  # can be \"categorical\", \"ordinal\", \"continuous\"\n",
+    "            \"names\": [  # names for the property (to sample from for building the prompts)\n",
     "                \"hydration free energy\",\n",
     "            ],\n",
     "        },\n",
@@ -1051,18 +1050,16 @@
     "            \"description\": \"experimental hydration free energy uncertainty\",\n",
     "            \"units\": \"kcal/mol\",\n",
     "            \"type\": \"continuos\",\n",
-    "            \"names\":\n",
-    "            [\n",
+    "            \"names\": [\n",
     "                \"hydration free energy uncertainty\",\n",
     "            ],\n",
     "        },\n",
     "        {\n",
-    "            \"id\": \"GAFF\", # name of the column in a tabular dataset\n",
-    "            \"description\": \"mobley group calculated value\", # description of what this column means\n",
-    "            \"units\": \"kcal/mol\", # units of the values in this column (leave empty if unitless)\n",
-    "            \"type\": \"continuous\", # can be \"categorical\", \"ordinal\", \"continuous\"\n",
-    "            \"names\": # names for the property (to sample from for building the prompts)\n",
-    "            [\n",
+    "            \"id\": \"GAFF\",  # name of the column in a tabular dataset\n",
+    "            \"description\": \"mobley group calculated value\",  # description of what this column means\n",
+    "            \"units\": \"kcal/mol\",  # units of the values in this column (leave empty if unitless)\n",
+    "            \"type\": \"continuous\",  # can be \"categorical\", \"ordinal\", \"continuous\"\n",
+    "            \"names\": [  # names for the property (to sample from for building the prompts)\n",
     "                \"GAFF\",\n",
     "                \"mobley group calculated value\",\n",
     "            ],\n",
@@ -1072,8 +1069,7 @@
     "            \"description\": \"mobley group calculated value calculated uncertainty\",\n",
     "            \"units\": \"kcal/mol\",\n",
     "            \"type\": \"continuos\",\n",
-    "            \"names\":\n",
-    "            [\n",
+    "            \"names\": [\n",
     "                \"GAFF uncertainty\",\n",
     "                \"mobley group calculated value uncertainty\",\n",
     "            ],\n",
@@ -1081,9 +1077,9 @@
     "    ],\n",
     "    \"identifiers\": [\n",
     "        {\n",
-    "            \"id\": \"SMILES\", # column name \n",
-    "            \"type\": \"SMILES\", # can be \"SMILES\", \"SELFIES\", \"IUPAC\", \"OTHER\"\n",
-    "            \"description\": \"SMILES\", # description (optional, except for \"OTHER\")\n",
+    "            \"id\": \"SMILES\",  # column name\n",
+    "            \"type\": \"SMILES\",  # can be \"SMILES\", \"SELFIES\", \"IUPAC\", \"OTHER\"\n",
+    "            \"description\": \"SMILES\",  # description (optional, except for \"OTHER\")\n",
     "        },\n",
     "        {\n",
     "            \"id\": \"iupac_name\",\n",
@@ -1091,19 +1087,18 @@
     "            \"description\": \"IUPAC\",\n",
     "        },\n",
     "    ],\n",
-    "    \"license\": \"CC BY-NC-SA 4.0\", # license under which the original dataset was published\n",
-    "    \"links\": [ # list of relevant links (original dataset, other uses, etc.)\n",
+    "    \"license\": \"CC BY-NC-SA 4.0\",  # license under which the original dataset was published\n",
+    "    \"links\": [  # list of relevant links (original dataset, other uses, etc.)\n",
     "        \"https://github.com/MobleyLab/FreeSolv\",\n",
     "        \"https://escholarship.org/uc/item/6sd403pz\",\n",
     "    ],\n",
-    "    \"num_points\": len(df), # number of datapoints in this dataset\n",
+    "    \"num_points\": len(df),  # number of datapoints in this dataset\n",
     "    \"url\": \"https://github.com/MobleyLab/FreeSolv\",\n",
-    "    \"bibtex\":\n",
-    "    \"\"\"@article{mobley2013experimental,\n",
+    "    \"bibtex\": \"\"\"@article{mobley2013experimental,\n",
     "title={Experimental and calculated small molecule hydration free energies},\n",
     "author={Mobley, David L},\n",
     "year={2013}\n",
-    "\"\"\"\n",
+    "\"\"\",\n",
     "}"
    ]
   },
@@ -1413,7 +1408,7 @@
    },
    "outputs": [],
    "source": [
-    "ls -lh"
+    "ls - lh"
    ]
   },
   {
