feat: update lipophilicity meta bibtex setup

--- a/data/lipophilicity/example_processing_and_templates.ipynb
+++ b/data/lipophilicity/example_processing_and_templates.ipynb
@@ -785,12 +785,7 @@
     "    ],\n",
     "    \"num_points\": len(df),  # number of datapoints in this dataset\n",
     "    \"url\": \"https://deepchemdata.s3-us-west-1.amazonaws.com/datasets/Lipophilicity.csv\",\n",
-    "    \"bibtex\": \"\"\"@techreport{hersey2015chembl,\n",
-    "  title={ChEMBL Deposited Data Set-AZ\\_dataset},\n",
-    "  author={Hersey, Anne},\n",
-    "  year={2015},\n",
-    "  institution={Technical Report, Technical report, EMBL-EBI, 2015. https://www. ebi. ac. uk~…}\n",
-    "}\"\"\",\n",
+    "    \"bibtex\": \"@techreport{hersey2015chembl,\\ntitle={ChEMBL Deposited Data Set-AZ\\_dataset},\\nauthor={Hersey, Anne},\\nyear={2015},\\ninstitution={Technical Report, Technical report, EMBL-EBI, 2015. https://www. ebi. ac. uk~…}}\",\n",
     "}"
    ]
   },
