feat: update lipophilicity meta bibtex setup #2

--- a/data/lipophilicity/example_processing_and_templates.ipynb
+++ b/data/lipophilicity/example_processing_and_templates.ipynb
@@ -745,7 +745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 38,
    "id": "d3890961-444e-4a26-b8fc-ed8c4e959af9",
    "metadata": {
     "tags": []
@@ -791,7 +791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 39,
    "id": "580bbd79-4845-4515-be94-3e4a9815d048",
    "metadata": {
     "tags": []
@@ -803,7 +803,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 40,
    "id": "873fa5dd-9b60-40f5-b537-4d7a206414ea",
    "metadata": {
     "tags": []
@@ -828,7 +828,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 41,
    "id": "ef6063c5-7a8b-4344-bccf-a073443feebf",
    "metadata": {
     "tags": []
@@ -838,9 +838,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "bibtex: \"@techreport{hersey2015chembl,\\n  title={ChEMBL Deposited Data Set-AZ\\\\_dataset},\\n\\\n",
-      "  \\  author={Hersey, Anne},\\n  year={2015},\\n  institution={Technical Report, Technical\\\n",
-      "  \\ report, EMBL-EBI, 2015. https://www. ebi. ac. uk~\\u2026}\\n}\"\n",
+      "bibtex: \"@techreport{hersey2015chembl,\\ntitle={ChEMBL Deposited Data Set-AZ\\\\_dataset},\\n\\\n",
+      "  author={Hersey, Anne},\\nyear={2015},\\ninstitution={Technical Report, Technical report,\\\n",
+      "  \\ EMBL-EBI, 2015. https://www. ebi. ac. uk~\\u2026}}\"\n",
       "description: Experimental results of octanol/water distribution coefficient (logD\n",
       "  at pH 7.4).\n",
       "identifiers:\n",
@@ -896,7 +896,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 42,
    "id": "8368bb20-8e1c-4b7d-b0e2-b39da36b5972",
    "metadata": {
     "tags": []
@@ -981,12 +981,7 @@
     "        ],\n",
     "        \"num_points\": len(df),  # number of datapoints in this dataset\n",
     "        \"url\": \"https://deepchemdata.s3-us-west-1.amazonaws.com/datasets/Lipophilicity.csv\",\n",
-    "        \"bibtex\": \"\"\"@techreport{hersey2015chembl,\n",
-    "      title={ChEMBL Deposited Data Set-AZ\\_dataset},\n",
-    "      author={Hersey, Anne},\n",
-    "      year={2015},\n",
-    "      institution={Technical Report, Technical report, EMBL-EBI, 2015. https://www. ebi. ac. uk~…}\n",
-    "    }\"\"\",\n",
+    "        \"bibtex\": \"@techreport{hersey2015chembl,\\ntitle={ChEMBL Deposited Data Set-AZ\\_dataset},\\nauthor={Hersey, Anne},\\nyear={2015},\\ninstitution={Technical Report, Technical report, EMBL-EBI, 2015. https://www. ebi. ac. uk~…}}\",\n",
     "    }\n",
     "    fn_meta = \"meta.yaml\"\n",
     "    with open(fn_meta, \"w\") as f:\n",
@@ -1001,7 +996,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 43,
    "id": "d0474f26-70f3-4655-b81a-df4ada90e7a6",
    "metadata": {
     "tags": []
