feat: update lipophilicity meta bibtex setup #3

--- a/data/lipophilicity/example_processing_and_templates.ipynb
+++ b/data/lipophilicity/example_processing_and_templates.ipynb
@@ -745,7 +745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 56,
    "id": "d3890961-444e-4a26-b8fc-ed8c4e959af9",
    "metadata": {
     "tags": []
@@ -785,13 +785,17 @@
     "    ],\n",
     "    \"num_points\": len(df),  # number of datapoints in this dataset\n",
     "    \"url\": \"https://deepchemdata.s3-us-west-1.amazonaws.com/datasets/Lipophilicity.csv\",\n",
-    "    \"bibtex\": \"@techreport{hersey2015chembl,\\ntitle={ChEMBL Deposited Data Set-AZ\\_dataset},\\nauthor={Hersey, Anne},\\nyear={2015},\\ninstitution={Technical Report, Technical report, EMBL-EBI, 2015. https://www. ebi. ac. uk~…}}\",\n",
+    "    \"bibtex\": [\"\"\"@techreport{hersey2015chembl,\n",
+    "    title={ChEMBL Deposited Data Set-AZ\\_dataset},\n",
+    "    author={Hersey, Anne},\n",
+    "    year={2015},\n",
+    "    institution={Technical Report, Technical report, EMBL-EBI, 2015. https://www. ebi. ac. uk~…}}\"\"\"],\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 57,
    "id": "580bbd79-4845-4515-be94-3e4a9815d048",
    "metadata": {
     "tags": []
@@ -803,7 +807,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 58,
    "id": "873fa5dd-9b60-40f5-b537-4d7a206414ea",
    "metadata": {
     "tags": []
@@ -811,7 +815,7 @@
    "outputs": [],
    "source": [
     "with open(fn_meta, \"w\") as f:\n",
-    "    yaml.dump(meta, f)"
+    "    yaml.dump(meta, f, sort_keys=False)"
    ]
   },
   {
@@ -828,7 +832,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 59,
    "id": "ef6063c5-7a8b-4344-bccf-a073443feebf",
    "metadata": {
     "tags": []
@@ -838,15 +842,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "bibtex: \"@techreport{hersey2015chembl,\\ntitle={ChEMBL Deposited Data Set-AZ\\\\_dataset},\\n\\\n",
-      "  author={Hersey, Anne},\\nyear={2015},\\ninstitution={Technical Report, Technical report,\\\n",
-      "  \\ EMBL-EBI, 2015. https://www. ebi. ac. uk~\\u2026}}\"\n",
+      "name: lipophilicity\n",
       "description: Experimental results of octanol/water distribution coefficient (logD\n",
       "  at pH 7.4).\n",
+      "targets:\n",
+      "- id: exp\n",
+      "  description: experimental results of octanol/water distribution coefficient (logD\n",
+      "    at pH 7.4)\n",
+      "  units: logD\n",
+      "  type: continuous\n",
+      "  names:\n",
+      "  - octanol/water distribution coefficient (logD at pH 7.4)\n",
+      "  - octanol/water distribution coefficient\n",
       "identifiers:\n",
-      "- description: SMILES\n",
-      "  id: SMILES\n",
+      "- id: SMILES\n",
       "  type: SMILES\n",
+      "  description: SMILES\n",
       "license: CC BY-SA 3.0\n",
       "links:\n",
       "- https://deepchemdata.s3-us-west-1.amazonaws.com/datasets/Lipophilicity.csv\n",
@@ -855,18 +866,12 @@
       "- https://www.ebi.ac.uk/chembl/document_report_card/CHEMBL3301361/\n",
       "- https://chembl.gitbook.io/chembl-interface-documentation/about#data-licensing\n",
       "- https://creativecommons.org/licenses/by-sa/3.0/\n",
-      "name: lipophilicity\n",
       "num_points: 4200\n",
-      "targets:\n",
-      "- description: experimental results of octanol/water distribution coefficient (logD\n",
-      "    at pH 7.4)\n",
-      "  id: exp\n",
-      "  names:\n",
-      "  - octanol/water distribution coefficient (logD at pH 7.4)\n",
-      "  - octanol/water distribution coefficient\n",
-      "  type: continuous\n",
-      "  units: logD\n",
-      "url: https://deepchemdata.s3-us-west-1.amazonaws.com/datasets/Lipophilicity.csv\n"
+      "url: https://deepchemdata.s3-us-west-1.amazonaws.com/datasets/Lipophilicity.csv\n",
+      "bibtex:\n",
+      "- \"@techreport{hersey2015chembl,\\n    title={ChEMBL Deposited Data Set-AZ\\\\_dataset},\\n\\\n",
+      "  \\    author={Hersey, Anne},\\n    year={2015},\\n    institution={Technical Report,\\\n",
+      "  \\ Technical report, EMBL-EBI, 2015. https://www. ebi. ac. uk~\\u2026}}\"\n"
      ]
     }
    ],
@@ -896,7 +901,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 48,
    "id": "8368bb20-8e1c-4b7d-b0e2-b39da36b5972",
    "metadata": {
     "tags": []
@@ -981,7 +986,11 @@
     "        ],\n",
     "        \"num_points\": len(df),  # number of datapoints in this dataset\n",
     "        \"url\": \"https://deepchemdata.s3-us-west-1.amazonaws.com/datasets/Lipophilicity.csv\",\n",
-    "        \"bibtex\": \"@techreport{hersey2015chembl,\\ntitle={ChEMBL Deposited Data Set-AZ\\_dataset},\\nauthor={Hersey, Anne},\\nyear={2015},\\ninstitution={Technical Report, Technical report, EMBL-EBI, 2015. https://www. ebi. ac. uk~…}}\",\n",
+    "        \"bibtex\": \"\"\"@techreport{hersey2015chembl,\n",
+    "        title={ChEMBL Deposited Data Set-AZ\\_dataset},\n",
+    "        author={Hersey, Anne},\n",
+    "        year={2015},\n",
+    "        institution={Technical Report, Technical report, EMBL-EBI, 2015. https://www. ebi. ac. uk~…}}\"\"\",\n",
     "    }\n",
     "    fn_meta = \"meta.yaml\"\n",
     "    with open(fn_meta, \"w\") as f:\n",
@@ -996,7 +1005,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 49,
    "id": "d0474f26-70f3-4655-b81a-df4ada90e7a6",
    "metadata": {
     "tags": []
