feat: update lipophilicity meta bibtex setup #5

--- a/data/lipophilicity/example_processing_and_templates.ipynb
+++ b/data/lipophilicity/example_processing_and_templates.ipynb
@@ -901,7 +901,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 65,
    "id": "8368bb20-8e1c-4b7d-b0e2-b39da36b5972",
    "metadata": {
     "tags": []
@@ -917,8 +917,8 @@
    ],
    "source": [
     "%%writefile $path_file\n",
-    "import requests\n",
     "import pandas as pd\n",
+    "import requests\n",
     "import yaml\n",
     "\n",
     "\n",
@@ -986,11 +986,11 @@
     "        ],\n",
     "        \"num_points\": len(df),  # number of datapoints in this dataset\n",
     "        \"url\": \"https://deepchemdata.s3-us-west-1.amazonaws.com/datasets/Lipophilicity.csv\",\n",
-    "        \"bibtex\": \"\"\"@techreport{hersey2015chembl,\n",
+    "        \"bibtex\": [\"\"\"@techreport{hersey2015chembl,\n",
     "        title={ChEMBL Deposited Data Set-AZ\\_dataset},\n",
     "        author={Hersey, Anne},\n",
     "        year={2015},\n",
-    "        institution={Technical Report, Technical report, EMBL-EBI, 2015. https://www. ebi. ac. uk~…}}\"\"\",\n",
+    "        institution={Technical Report, Technical report, EMBL-EBI, 2015. https://www. ebi. ac. uk~…}}\"\"\"],\n",
     "    }\n",
     "    fn_meta = \"meta.yaml\"\n",
     "    with open(fn_meta, \"w\") as f:\n",
@@ -1005,7 +1005,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 66,
    "id": "d0474f26-70f3-4655-b81a-df4ada90e7a6",
    "metadata": {
     "tags": []
